removed React logos and fixed the overflow issue

--- a/frontend/src/PathfindingVisualizer/PathfindingVisualizer.css
+++ b/frontend/src/PathfindingVisualizer/PathfindingVisualizer.css
@@ -3,7 +3,7 @@
 .grid-container {
     margin-left: 2%;
     width: 96%;
-    height: 500px;
+    height: 60vh;
 }
 
 /* takes up all the space that is given from 
@@ -24,12 +24,11 @@
     font-size: 15px;
     font-weight: bold;
     line-height: 25px;
-    height: 25px;
+    height: 120%;
     margin-right: -1px;
-    margin-top: 0px;
-    /* padding: 0; */
+    margin-top: -1px;
     text-align: center;
-    width: 1.738%;
+    width: 1.7%;
 }
 
 /* coordinates text details */
